# chip8-emulator

./: .gitignore  CMakeLists.txt  Chip8_Emulator  Makefile  README.md  chip8-cpu.cpp  chip8-cpu.hpp  chip8-emu.c  chip8-emu.cpp
previous/: CMakeLists.txt  Makefile  chip8-emu
src/: chip8.cpp  chip8.hpp  clock.cpp  clock.hpp  main.cpp  sound.cpp  sound.hpp
